--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test'"
   },
   "engines": {
     "node": "8.9.4"
@@ -16,6 +17,9 @@
     "express": "^4.16.3"
   },
   "devDependencies": {
+    "expect": "^23.3.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.17.5",
     "socket.io": "^2.1.1"
   }
 }
