--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "moment": "^2.22.2"
   },
   "devDependencies": {
     "expect": "^23.3.0",
