--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
-    "test-watch": "nodemon --exec 'npm test'"
+    "test-watch": "nodemon --exec \"npm test\""
   },
   "engines": {
-    "node": "8.9.4"
+    "node": ">8.9.4"
   },
   "author": "",
   "license": "ISC",
@@ -20,7 +20,7 @@
   "devDependencies": {
     "expect": "^23.3.0",
     "mocha": "^5.2.0",
-    "nodemon": "^1.17.5",
+    "nodemon": "^1.18.7",
     "socket.io": "^2.1.1"
   }
 }
