--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "moment": "^2.22.2"
+    "moment": "^2.22.2",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "expect": "^23.3.0",
     "mocha": "^5.2.0",
-    "nodemon": "^1.18.7",
-    "socket.io": "^2.2.0"
+    "nodemon": "^1.18.7"
   }
 }
